wb reworking
