# server/types/game.go
@@ -20,15 +20,10 @@ type Move struct {
 
 type Dices [2]int
 
-type PossibleMoves struct {
-	Moves []Move `json:"moves"`
-	Dice  Dices  `json:"dice" example:"1,2"`
-}
-
 type Turn struct {
 	ID     int64     `json:"id"`
 	GameId int64     `json:"game_id"`
-	User   string    `json:"user"`
+	User   int64     `json:"user"`
 	Time   time.Time `json:"time"`
 	Dices  Dices     `json:"dices"`
 	Double bool      `json:"double"`
@@ -51,14 +46,15 @@ const GameDoubleOwnerP1 = "p1"
 const GameDoubleOwnerP2 = "p2"
 
 type Game struct {
-	ID      int64 `json:"id"`
+	ID int64 `json:"id"`
+	// ID of the player
 	Player1 int64 `json:"player1"`
 	Elo1    int64 `json:"elo1"`
 	Player2 int64 `json:"player2"`
 	Elo2    int64 `json:"elo2"`
 
 	Start  time.Time `json:"start"`
-	End    time.Time `json:"end"`
+	End    time.Time `json:"endtime"`
 	Status string    `json:"status"`
 
 	P1Checkers [25]int8 `json:"p1checkers"` // arr[0] is bar
@@ -75,11 +71,12 @@ type Game struct {
 }
 
 type ReturnGame struct {
-	ID      int64 `json:"id"`
-	Player1 int64 `json:"player1"`
-	Elo1    int64 `json:"elo1"`
-	Player2 int64 `json:"player2"`
-	Elo2    int64 `json:"elo2"`
+	ID int64 `json:"id"`
+	// Username of the player
+	Player1 string `json:"player1"`
+	Elo1    int64  `json:"elo1"`
+	Player2 string `json:"player2"`
+	Elo2    int64  `json:"elo2"`
 
 	Start  time.Time `json:"start"`
 	End    time.Time `json:"end"`
@@ -93,23 +90,4 @@ type ReturnGame struct {
 	WantToDouble bool   `json:"want_to_double"`
 
 	CurrentPlayer string `json:"current_player"`
-}
-
-func (g *Game) ToReturnGame() ReturnGame {
-	return ReturnGame{
-		ID:            g.ID,
-		Player1:       g.Player1,
-		Elo1:          g.Elo1,
-		Player2:       g.Player2,
-		Elo2:          g.Elo2,
-		Start:         g.Start,
-		End:           g.End,
-		Status:        g.Status,
-		P1Checkers:    g.P1Checkers,
-		P2Checkers:    g.P2Checkers,
-		DoubleValue:   g.DoubleValue,
-		DoubleOwner:   g.DoubleOwner,
-		WantToDouble:  g.WantToDouble,
-		CurrentPlayer: g.CurrentPlayer,
-	}
 }
